Menambahkan tag hr dan membuat file about.html

--- a/about.html
+++ b/about.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belajar Git</title>
+    <title>About Me</title>
 </head>
 <body>
-    <h2>Belajar git</h2>
-    <hr>
-    <p>Im learn git</p>
-    <a href="about.html">pergi ke halaman about</a>
+    <h3>About Me</h3>
+    <p>Im jon learning git</p>
+    <p>Git is easy</p>
 </body>
 </html>
