Menambahkan link ke halaman index

--- a/about.html
+++ b/about.html
@@ -9,6 +9,6 @@
 <body>
     <h3>About Me</h3>
     <p>Im jon learning git</p>
-    <p>Git is eazy</p>
+    <a href="index.html">kembali ke halaman index</a>
 </body>
 </html>
